--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -18,7 +18,7 @@ services:
 
     # Build configuration
     source_dir: /
-    build_command: pnpm install && pnpm --filter @nymai/core build && pnpm --filter @nymai/api build
+    build_command: corepack enable && corepack prepare pnpm@latest --activate && pnpm install && pnpm --filter @nymai/core build && pnpm --filter @nymai/api build
     run_command: pnpm --filter @nymai/api start
 
     # Runtime settings
