--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,7 +3,15 @@
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "lib": ["ES2022"],
+    "baseUrl": ".",
+    "paths": {
+      "@nymai/core": [
+        "packages/core/src/index.ts"
+      ]
+    },
+    "lib": [
+      "ES2022"
+    ],
     "strict": true,
     "noEmit": true,
     "skipLibCheck": true,
