--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,16 +14,17 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@nymai/core": "workspace:*",
-    "hono": "^4.0.0",
     "@hono/node-server": "^1.8.0",
+    "@nymai/core": "workspace:*",
     "@supabase/supabase-js": "^2.39.0",
+    "hono": "^4.0.0",
     "nanoid": "^5.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "rimraf": "^5.0.0",
     "tsx": "^4.7.0",
-    "vitest": "^2.0.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.3.0",
+    "vitest": "^2.0.0"
   }
 }
