fix: resolve tsconfig path mappings and remove composite mode for DO deployment

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -40,6 +40,7 @@ services:
     envs:
       - key: NPM_CONFIG_NODE_LINKER
         value: hoisted
+        scope: RUN_AND_BUILD_TIME
       - key: NODE_ENV
         value: production
       - key: PORT
