--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
+    "start": "tsx dist/index.js",
     "test": "vitest run",
     "lint": "eslint src/",
     "typecheck": "tsc --noEmit",
@@ -18,12 +18,12 @@
     "@nymai/core": "workspace:*",
     "@supabase/supabase-js": "^2.39.0",
     "hono": "^4.0.0",
-    "nanoid": "^5.0.0"
+    "nanoid": "^5.0.0",
+    "tsx": "^4.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "rimraf": "^5.0.0",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.0",
     "vitest": "^2.0.0"
   }
