chore: clean up root env files and align source code with new env variable naming

--- a/packages/admin/.env.example
+++ b/packages/admin/.env.example
@@ -25,10 +25,11 @@ VITE_API_KEY=
 # Project URL - Find in: Supabase Dashboard > Settings > API > Project URL
 VITE_SUPABASE_URL=https://[YOUR-PROJECT-REF].supabase.co
 
-# Anon/Public Key (safe to expose to client)
-# Find in: Supabase Dashboard > Settings > API > anon public key
+# Publishable/Public Key (safe to expose to client)
+# Find in: Supabase Dashboard > Settings > API > Publishable key
+# Note: Anon key is legacy
 # This key respects RLS policies - safe for browser
-VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+VITE_SUPABASE_PUBLISHABLE_KEY=sb_publishable_...
 
 # --------------------------------------------
 # Optional: Feature Flags
