--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -5,19 +5,19 @@
 # NEVER commit .env.local or any file containing real secrets
 # ============================================
 
-# --------------------------------------------
-# Server Configuration
-# --------------------------------------------
+# =============================================================================
+# APPLICATION CONFIGURATION
+# =============================================================================
+# Environment: development | staging | production
 NODE_ENV=development
 PORT=3000
 
-# --------------------------------------------
-# Database (Supabase PostgreSQL)
-# --------------------------------------------
-# Connection string for direct database access
-# Format: postgresql://[user]:[password]@[host]:[port]/[database]
-# Find this in: Supabase Dashboard > Settings > Database > Connection string
-DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
+# =============================================================================
+# DATABASE CONFIGURATION (Supabase)
+# =============================================================================
+# Get this from Supabase Project Settings > Database > Connection String
+# Format: postgresql://postgres:[YOUR-PASSWORD]@[PROJECT-REF].supabase.co:5432/postgres
+SUPABASE_DB_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
 
 # --------------------------------------------
 # Supabase API
@@ -25,10 +25,11 @@ DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabas
 # Project URL - Find in: Supabase Dashboard > Settings > API > Project URL
 SUPABASE_URL=https://[YOUR-PROJECT-REF].supabase.co
 
-# Service Role Key (KEEP SECRET - server-side only!)
-# Find in: Supabase Dashboard > Settings > API > service_role key
+# Secret Key (KEEP SECRET - server-side only!)
+# Find in: Supabase Dashboard > Settings > API > Secret key
+# Note: Service Role Key is legacy
 # WARNING: This key bypasses RLS - never expose to client
-SUPABASE_SERVICE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+SUPABASE_SECRET_KEY=sb_secret_...
 
 # --------------------------------------------
 # Zendesk OAuth (for sidebar app auth)
