fix(admin): corrected outputDirectory in vercel.json for monorepo support

--- a/packages/admin/vercel.json
+++ b/packages/admin/vercel.json
@@ -1,7 +1,7 @@
 {
     "buildCommand": "pnpm --filter admin build",
     "installCommand": "pnpm install",
-    "outputDirectory": "packages/admin/dist",
+    "outputDirectory": "dist",
     "framework": "vite",
     "rewrites": [
         {
