feat: add 7 new PII types and multi-comment scanning
Detection Enhancement:
- Add DOB, PASSPORT, BANK_ACCOUNT, ROUTING, IP_ADDRESS, MEDICARE, ITIN patterns
- Add ABA routing number checksum validation
- 48 detection tests passing

Multi-Comment Scanning:
- Scan all public comments (up to 20) instead of just latest
- Group findings by commentId with visual separators
- Support multi-comment undo

Docs & Infrastructure:
- Add admin-guide, agent-guide, e2e-testing-checklist
- Add plans (detection, attachment scanning, launch readiness)
- Add competitive analysis
- Update gitignore for MCP configs

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,18 @@
 .claude/
 !.claude/mcp_settings.example.json
 .mcp.json
+.mcp.jsonc
+
+# OpenCode workspace config (contains API keys)
+opencode.json
+opencode.jsonc
+!.opencode.example.json
+
+# Serena plugin config
+.serena/
+
+# TypeScript build info
+*.tsbuildinfo
 
 # Node modules
 node_modules/
