--- a/packages/api/render.yaml
+++ b/packages/api/render.yaml
@@ -19,7 +19,7 @@ services:
         sync: false
       - key: SUPABASE_URL
         sync: false
-      - key: SUPABASE_SERVICE_KEY
+      - key: SUPABASE_SECRET_KEY
         sync: false
       - key: ZENDESK_CLIENT_ID
         sync: false
