fix(deploy): skip optional native dependencies and allow non-frozen lockfile for DO build
- Add .npmrc with optional=false and frozen-lockfile=false
- Add PNPM_CONFIG_OPTIONAL=false and PNPM_CONFIG_FROZEN_LOCKFILE=false to .do/app.yaml
- These settings apply to buildpack's automatic pnpm install (before build_command)
- Prevents canvas native build failure (pangocairo missing on DO)
- Resolves ERR_PNPM_OUTDATED_LOCKFILE error
- canvas is optional dependency of pdfjs-dist (zendesk-legacy only, not deployed)

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -38,6 +38,12 @@ services:
     # Environment variables
     # Set values in DigitalOcean dashboard (Settings > App-Level Environment Variables)
     envs:
+      - key: PNPM_CONFIG_OPTIONAL
+        value: 'false'
+        scope: RUN_AND_BUILD_TIME
+      - key: PNPM_CONFIG_FROZEN_LOCKFILE
+        value: 'false'
+        scope: RUN_AND_BUILD_TIME
       - key: NPM_CONFIG_NODE_LINKER
         value: hoisted
         scope: RUN_AND_BUILD_TIME
