--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "prettier": "^3.2.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "canvas": "npm:empty-npm-package@1.0.0"
+    }
   }
 }
