--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.8.0",
+    "@hubspot/api-client": "^12.0.1",
     "@nymai/core": "workspace:*",
     "@supabase/supabase-js": "^2.39.0",
     "hono": "^4.0.0",
