feat: implement OAuth 2.0 and signature verification for HubSpot marketplace
- Add hubspotSignatureAuth middleware using X-HubSpot-Signature-v3
- Implement encrypted OAuth token storage per portalId (AES-256-GCM)
- Add OAuth routes: /oauth/install, /oauth/callback, /oauth/uninstall
- Update HubSpot client to pass portalId instead of unsupported headers
- Remove broken token passthrough (hubspot.fetch ignores custom headers)

Breaking: Requires new env vars HUBSPOT_CLIENT_ID, HUBSPOT_CLIENT_SECRET,
HUBSPOT_REDIRECT_URI, TOKEN_ENCRYPTION_KEY and oauth_tokens table in Supabase

Docs: Update architecture.md, changelog.md, project_status.md, project_spec.md

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -32,11 +32,16 @@ SUPABASE_URL=https://[YOUR-PROJECT-REF].supabase.co
 SUPABASE_SECRET_KEY=sb_secret_...
 
 # --------------------------------------------
-# Zendesk OAuth (for sidebar app auth)
+# HubSpot OAuth (for marketplace apps)
 # --------------------------------------------
-# Create OAuth client in: Zendesk Admin > Apps and integrations > APIs > OAuth Clients
-ZENDESK_CLIENT_ID=your_zendesk_oauth_client_id
-ZENDESK_CLIENT_SECRET=your_zendesk_oauth_client_secret
+# Create OAuth app in: HubSpot Developer Portal > Apps > Your App > Auth
+HUBSPOT_CLIENT_ID=your_hubspot_client_id
+HUBSPOT_CLIENT_SECRET=your_hubspot_client_secret
+HUBSPOT_REDIRECT_URI=https://your-api-domain.com/oauth/callback
+
+# Token encryption key for storing OAuth tokens (32 bytes = 64 hex chars)
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+TOKEN_ENCRYPTION_KEY=your_64_character_hex_string_here
 
 # --------------------------------------------
 # Optional: Deployment Platform
